THe Node Brings Views Back And Made The Files Better For Reading

--- a/views/QRoom_Home/Main.ejs
+++ b/views/QRoom_Home/Main.ejs
@@ -58,7 +58,7 @@
 
                         <div class="form-item">
                             <label for="button">Check-In-Date</label>
-                            <input type="date" min="1" value="1" name="checkInDate" min="<%=Today%>">
+                            <input type="date" min="1" value="1" name="checkInDate" min="">
                         </div>
 
                         <div class="form-item">
@@ -113,25 +113,25 @@
         <!-- End About -->
 
         <!-- Silder All Star -->
-        <!-- <div class="slide hi-slide">
-    <div class="hi-prev "></div>
-    <div class="hi-next "></div>
-    <ul>
-        <li>
-            <img
-                src="https://images.unsplash.com/photo-1515548212260-ac87067b15ab?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8cHJpY2V8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" />
-        </li>
-        <li><img
-                src="https://images.unsplash.com/photo-1613843433065-819a04a47a09?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTZ8fHByaWNlfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" />
-        </li>
-        <li><img src="https://i.pinimg.com/236x/b4/5c/8d/b45c8dbda4455709dcfd19268ade2ed6.jpg" /></li>
-        <li><img src="https://i.pinimg.com/236x/7f/f9/15/7ff915bfb0b53fa38ac0530f8e3d9bbe.jpg" /></li>
-        <li><img src="https://i.pinimg.com/236x/fb/99/39/fb9939d52f6e546dba50f206616010c7.jpg" /></li>
-        <li><img src="https://i.pinimg.com/236x/34/0f/c9/340fc9c9a8e608e692909f0c723a1313.jpg" /></li>
-        <li><img src="https://i.pinimg.com/236x/93/ec/77/93ec770aa1dad6ff11b3385b1b1b716e.jpg" /></li>
-        <li><img src="https://i.pinimg.com/236x/c3/00/14/c30014d8e71739149df806718e839960.jpg" /></li>
-    </ul>
-</div> -->
+        <div class="slide hi-slide">
+            <div class="hi-prev "></div>
+            <div class="hi-next "></div>
+            <ul>
+                <li>
+                    <img
+                        src="https://images.unsplash.com/photo-1515548212260-ac87067b15ab?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8cHJpY2V8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" />
+                </li>
+                <li><img
+                        src="https://images.unsplash.com/photo-1613843433065-819a04a47a09?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTZ8fHByaWNlfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" />
+                </li>
+                <li><img src="https://i.pinimg.com/236x/b4/5c/8d/b45c8dbda4455709dcfd19268ade2ed6.jpg" /></li>
+                <li><img src="https://i.pinimg.com/236x/7f/f9/15/7ff915bfb0b53fa38ac0530f8e3d9bbe.jpg" /></li>
+                <li><img src="https://i.pinimg.com/236x/fb/99/39/fb9939d52f6e546dba50f206616010c7.jpg" /></li>
+                <li><img src="https://i.pinimg.com/236x/34/0f/c9/340fc9c9a8e608e692909f0c723a1313.jpg" /></li>
+                <li><img src="https://i.pinimg.com/236x/93/ec/77/93ec770aa1dad6ff11b3385b1b1b716e.jpg" /></li>
+                <li><img src="https://i.pinimg.com/236x/c3/00/14/c30014d8e71739149df806718e839960.jpg" /></li>
+            </ul>
+        </div>
         <!-- Silder All End -->
 
         <!-- About us -->
