--- a/views/partials/HomePartials/Navigation.ejs
+++ b/views/partials/HomePartials/Navigation.ejs
@@ -13,10 +13,18 @@
     <div class="nav__icons">
         <div id="nav__menu-btn" class="fas fa-bars"></div>
         <div id="nav__search-btn" class="fas fa-search"></div>
-        <div id="nav__login-btn" class="fas fa-user"></div>
+        <% if(user.picture!=undefined){ %>
+            <img width="50px" height="50px" id="nav__login-btn" src="../../../<%= user.picture %>" style=" border: 4px solid #666;border-radius: 50%;" alt="ProfileImage">
+            <% }else{ %>
+                <div id="nav__login-btn" class="fas fa-user"></div>
+                <% } %>
 
     </div>
 
+    <form action="/Search" class="nav__search-form" method="post">
+        <input type="search" placeholder="search here..." id="search-box" name="term">
+        <label for="search-box" class="fas fa-search"></label>
+    </form>
     <% if(user==null){ %>
         <form action="" class="login-form">
             <h3>Login form</h3>
