--- a/views/QRoom_Home/Signup.ejs
+++ b/views/QRoom_Home/Signup.ejs
@@ -42,13 +42,13 @@
                 </div>
             </div>
 
-            <!-- <div class="confirmpass error"></div>
+            <div class="confirmpass error"></div>
             <div class="field password">
                 <div class="input-area">
-                    <input type="password" placeholder="Confirm Password" name="password">
+                    <input type="password" placeholder="Confirm Password" name="confirmPassword">
                     <i class="icon fas fa-unlock"></i>
                 </div>
-            </div> -->
+            </div>
 
             <div class="phone error"></div>
             <div class="field phone">
