--- a/views/partials/HomePartials/Navigation.ejs
+++ b/views/partials/HomePartials/Navigation.ejs
@@ -13,8 +13,12 @@
     <div class="nav__icons">
         <div id="nav__menu-btn" class="fas fa-bars"></div>
         <div id="nav__search-btn" class="fas fa-search"></div>
-        <% if(user.picture!=undefined){ %>
+        <% if(user!=null){ %>
+            <% if(user.picture){ %>
             <img width="50px" height="50px" id="nav__login-btn" src="../../../<%= user.picture %>" style=" border: 4px solid #666;border-radius: 50%;" alt="ProfileImage">
+            <% }else{ %>
+                <img width="50px" height="50px" id="nav__login-btn" src="../../All Images/Profile_Images/user.png" style="border: 4px solid #666;border-radius: 50%;" alt="ProfileImage">
+                <% } %>
             <% }else{ %>
                 <div id="nav__login-btn" class="fas fa-user"></div>
                 <% } %>
