--- a/views/QRoom_Home/Searchbar/Search.ejs
+++ b/views/QRoom_Home/Searchbar/Search.ejs
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <!--<title> Responsive Sidebar Menu  | CodingLab </title>-->
-    <link rel="stylesheet" href="CSS/Search_CSS/nav.css">
-    <link rel="stylesheet" href="CSS/Search_CSS/StarsRating/stars.css">
-    <link rel="stylesheet" href="CSS/Search_CSS/search.css">
+    <link rel="stylesheet" href="../../../CSS/Search_CSS/nav.css">
+    <link rel="stylesheet" href="../../../CSS/Search_CSS/StarsRating/stars.css">
+    <link rel="stylesheet" href="../../../CSS/Search_CSS/search.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-    <link rel="icon" href="All Images/Serach_Images/images/logo.png">
+    <link rel="icon" href="../../../All Images/Serach_Images/images/logo.png">
 
     <!-- BoxIcons CDN Link -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
@@ -43,15 +43,15 @@
                 <% if(user){ %>
                     <a href="/Profile/<%=user._id%> ">
                         <!-- <i class='bx bx-user'> -->
-                        <% if(Image){ %>
-                            <img class='bx bx-user' src="data:<%=Image.contentType%>;base64,<%=Image.imageBase64 %>" alt="profileImg">
-                            <% }else{ %>
+                        <% if(user.picture){ %>
+                            <img class='bx bx-user' src="../../../<%= user.picture %>" alt="profileImg">
+                        <% }else{ %>
                                 <p>Nothing To See Here</p>
-                                <% } %>
-                                    <!-- </i> -->
-                                    <span class="links_name">
-                                        <%=user.name%>
-                                    </span>
+                        <% } %>
+                            <!-- </i> -->
+                            <span class="links_name">
+                                <%=user.name%>
+                            </span>
                     </a>
                     <span class="tooltip">
                         <%=user.name + ' --Profile' %>
@@ -95,18 +95,15 @@
     <!-- Home Section Start -->
     <section class="home-section">
         <div class="home_section__container">
-            <% if(search){ %>
+           
                 <h1 style="  font-family: 'Courgette', cursive; margin-left: 18rem;margin-bottom: 2rem; font-size: 2rem;">
-                    <%=search.Location %> we found <span>
-                            <%= count %>
+                    In Kurdistan we found <span>
+                           5
                         </span> Hotels
                 </h1>
-                <% }else{ %>
                     <h1 style="  font-family: 'Courgette', cursive; margin-left: 18rem;margin-bottom: 2rem; font-size: 2rem;">
                         In Kurdistan We found <span>
-                            <%= count %>
                         </span> Hotels</h1>
-                    <% } %>
         </div>
         <!-- Home Section End -->
 
@@ -142,13 +139,13 @@
 
         <!-- Left Panel -->
         <div class="left-panel">
-            <% Find.forEach(find=> { %>
+            <% Hotels.forEach(find=> { %>
                 <div class="box-container">
                     <div class="box">
                         <div class="content flow">
                             <div class="even-column">
                                 <div class="col-left">
-                                    <img src="All Images/Search_Images/images/<%=find.Name.toLowerCase()%>.jpg" alt="Highcrest Hotel">
+                                    <img src="../../../All Images/Search_Images/images/<%=find.Name.toLowerCase()%>.jpg" alt="Highcrest Hotel">
                                     <h3> <i class="fas fa-map-marker-alt"></i>
                                         <%=find.City %> / Hotels
                                     </h3>
@@ -181,56 +178,7 @@
                 </div>
                 <% }); %>
         </div>
-        <% if(search){ %>
-            <div class="right-panel">
-                <form action="/Search" method="post">
-                    <div class="title-right-panel">
-                        <h1 style="font-family: 'Courgette', cursive;font-size: 2rem;padding-left: 30px;"> Search
-                        </h1>
-                    </div>
-                    <div class="card-right-panel">
-                        <label for=""> Location </label>
-                        <select name="location-right-panel" class="input">
-                            <% if(search.Location.toUpperCase()=="Sulaymaniyah" .toUpperCase() ){%>
-                                <option selected>Sulaymaniyah</option>
-                                <option>Hawler</option>
-                                <option>Duhok</option>
-                                <%}else if(search.Location.toUpperCase()=="Hawler" .toUpperCase() ) {%>
-                                    <option>Sulaymaniyah</option>
-                                    <option selected>Hawler</option>
-                                    <option>Duhok</option>
-                                    <% }else{ %>
-                                        <option>Sulaymaniyah</option>
-                                        <option>Hawler</option>
-                                        <option selected>Duhok</option>
-                                        <% } %>
-                        </select>
-                        <!-- <input type="text" class="input" name="location-right-panel" placeholder="" value=""> -->
-                    </div>
-                    <div class="card-right-panel">
-                        <label for=""> Check-In-Date </label>
-                        <input type="date" class="input" name="check-in-right-panel" placeholder="" value="<%=search.Check_In_Date%>">
-                    </div>
-                    <div class="card-right-panel">
-                        <label for=""> Check-Out-Date </label>
-                        <input type="date" class="input" name="check-out-right-panel" placeholder="" value="<%=search.Check_Out_Date%>">
-                    </div>
-                    <p class="information-user">1/Night Stay</p>
-                    <div class="card-right-panel">
-                        <input type="number" class="input" name="adult-panel" placeholder="" value="<%=search.Adults%>">
-                    </div>
-                    <div class="card-right-panel">
-                        <input type="number" class="input" name="children-panel" placeholder="" value="<%=search.Children%>">
-                    </div>
-                    <div class="card-right-panel">
-                        <input type="number" class="input" name="room-panel" placeholder="" value="<%=search.Rooms%>">
-                    </div>
-                    <div class="card-right-panel">
-                    </div>
-
-                </form>
-            </div>
-            <% }else{ %>
+       
                 <div class="right-panel">
                     <form action="/Search" method="post">
                         <div class="title-right-panel">
@@ -272,7 +220,6 @@
                         <input type="submit" class="btn-search-right-panel fas fa-search" value="Search">
                     </form>
                 </div>
-                <% } %>
                     </div>
     </section>
     <!-- End of Left Panel -->
