Fixed Cache And Now Time For Clearing

--- a/views/QRoom_Home/picture_Update.ejs
+++ b/views/QRoom_Home/picture_Update.ejs
@@ -41,7 +41,7 @@
             uploadBtn.style.display = 'none';
         });
 
-        file.addEventListener('change', function() {
+        files.addEventListener('change', function() {
             // this refer to the file
             const choosedFile = this.files[0];
 
